Ported all items except BriefcaseItem (needs ConductorEntity update)